Code adjustments due to JDK 19 upgrade